fix wrap style

--- a/packages/app/src/components/Navigation/index.less
+++ b/packages/app/src/components/Navigation/index.less
@@ -12,43 +12,34 @@
         display: inline-flex;
         flex-direction: column;
 
-        width: 100%;
-        overflow: hidden;
-
         .items {
-            // make an scrollable bar
-            display: inline-flex;
-            flex-direction: row;
+            display: flex;
             align-items: center;
-            
-            width: max-content;
-            white-space: nowrap;
-            overflow-x: scroll;
-
-            justify-content: space-between;
+            justify-content: space-around;
+            flex-wrap: wrap;
 
             .item {
                 --ignore-dragger: true;
 
-                display: inline-flex;
+                display: flex;
                 flex-direction: column;
+
                 align-items: center;
                 justify-content: center;
 
-                margin: 0 10px;
                 padding: 10px;
-
-                width: @buttonSize!important;
-                height: @buttonSize!important;
+                margin: 10px 0;
+                
+                width: @buttonSize;
+                min-width: @buttonSize;
+                height: @buttonSize;
+                min-height: @buttonSize;
                 
                 border-radius: @buttonBorderRadius;
                 
                 background-color: var(--background-color-accent);
                 transition: all 80ms ease-in-out;
                 
-                white-space: nowrap;
-                overflow: hidden;
-
                 .icon {
                     svg {
                         margin: 0 !important;
@@ -57,16 +48,15 @@
                 }
                 
                 .name {
-                    padding-top: 10px;
-                    color: var(--background-color-contrast);
-
-                    word-break: break-all;
-                    overflow: hidden;
-
-                    text-overflow: ellipsis;
                     width: 100%;
+                    
+                    word-break: break-all;
+                    text-overflow: ellipsis;
                     text-align: center;
                     
+                    color: var(--background-color-contrast);
+                    padding-top: 10px;
+
                     h1 {
                         word-break: break-all;
                         width: 100%;
